--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -48,6 +48,9 @@ justify-content: space-between
 
 .user-component__column:last-child{
     color:rgba(0,0,0,0.5);
+    display:flex;
+    flex-direction:column;
+    align-items:flex-end;
 }
 
 .user-component__time{
